[package]
name = "cbs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
ncollide2d = "0.33.0"
num_cpus = "1.16.0"
ordered-float = "4.2.0"
parking_lot = "0.12.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.195", features = ["derive"] }
tuple = "0.5.2"

[dev-dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
