[package]
name = "caboose"
version = "0.0.0"
edition = "2021"
description = "A generic and parallel implementation of Continuous Conflict-Based Search algorithm for Multi-Agent Path Finding."
repository = "https://github.com/vcoppe/caboose"
readme = "README.md"
license = "MIT"
keywords = ["multi-agent", "path-finding", "planning", "robotics"]
categories = ["algorithms", "science::robotics"]
exclude = ["resources/*" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "0.2.1"
ncollide2d = "0.33.0"
num_cpus = "1.16.0"
ordered-float = "4.2.0"
parking_lot = "0.12.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
serde = { version = "1.0.195", features = ["derive"] }
tuple = "0.5.2"

[dev-dependencies]
nannou = "0.18.1"
nannou_egui = "0.5.0"
